--- a/src/cascadia/TerminalSettingsEditor/Launch.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Launch.xaml
@@ -116,9 +116,9 @@
                                 <TextBlock Grid.Row="0"
                                            Grid.Column="1"
                                            Grid.ColumnSpan="2"
+                                           VerticalAlignment="Center"
                                            AutomationProperties.AccessibilityView="Raw"
-                                           Text="{x:Bind Name}"
-                                           VerticalAlignment="Center" />
+                                           Text="{x:Bind Name}" />
 
                                 <TextBlock Grid.Row="1"
                                            Grid.Column="1"
