Center text in the Default Terminal dropdown (#19072)
This is a small UI fix so that we center the default terminal application ComboBox text.

--- a/src/cascadia/TerminalSettingsEditor/Launch.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Launch.xaml
@@ -116,6 +116,7 @@
                                 <TextBlock Grid.Row="0"
                                            Grid.Column="1"
                                            Grid.ColumnSpan="2"
+                                           VerticalAlignment="Center"
                                            AutomationProperties.AccessibilityView="Raw"
                                            Text="{x:Bind Name}" />
 
