[UX] Settings UI refinements (#19001)
This PR is a (first) design pass on the Terminal settings UX to bring
consistency and alignment with the rest of the OS and other settings
surfaces.

High-level changes include:
- Using WinUI brushes vs. UWP/OS brushes. [See brushes overview in the
WinUI 3 Gallery:](winui3gallery://item/Color).
- Updating pixel values for margins, fontsizes, paddings etc. using
units of 4. See [the design guidelines for more
info](https://learn.microsoft.com/en-us/windows/apps/design/basics/content-basics).
- Adding rounded corners on various elements to be consistent with the
Windows 11 look and feel (using the ControlCornerRadius or
OverlayCornerRadius WinUI resources as much as possible).
- Decreasing the page header titles / breadcrumb so it feels a bit less
cramped.
- Fixing a bug where the title of the page was not aligned with the
content when resizing the window (note to self: should fix this in
PowerToys too):
- Ensuring the subheader texts for settings categories are inline with
the rest of the OS (== decreasing the fontsize).

---------

Co-authored-by: Carlos Zamora <carlos.zamora@microsoft.com>

--- a/src/cascadia/TerminalSettingsEditor/Actions.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Actions.xaml
@@ -56,13 +56,14 @@
                     <Style x:Key="KeyChordBorderStyle"
                            TargetType="Border">
                         <Setter Property="BorderThickness" Value="1" />
-                        <Setter Property="CornerRadius" Value="1" />
-                        <Setter Property="Background" Value="{ThemeResource SystemAltMediumLowColor}" />
-                        <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                        <Setter Property="CornerRadius" Value="{StaticResource ControlCornerRadius}" />
+                        <Setter Property="Background" Value="{ThemeResource SubtleFillColorSecondaryBrush}" />
+                        <Setter Property="BorderBrush" Value="{ThemeResource DividerStrokeColorDefaultBrush}" />
+                        <Setter Property="Padding" Value="4,4,4,4" />
                     </Style>
                     <Style x:Key="KeyChordTextBlockStyle"
                            TargetType="TextBlock">
-                        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                        <Setter Property="Foreground" Value="{ThemeResource TextFillColorSecondaryBrush}" />
                     </Style>
 
                 </ResourceDictionary>
@@ -97,13 +98,15 @@
                     <Style x:Key="KeyChordBorderStyle"
                            TargetType="Border">
                         <Setter Property="BorderThickness" Value="1" />
-                        <Setter Property="CornerRadius" Value="1" />
-                        <Setter Property="Background" Value="{ThemeResource SystemAltMediumLowColor}" />
-                        <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                        <Setter Property="BorderThickness" Value="1" />
+                        <Setter Property="CornerRadius" Value="{StaticResource ControlCornerRadius}" />
+                        <Setter Property="Background" Value="{ThemeResource SubtleFillColorSecondaryBrush}" />
+                        <Setter Property="BorderBrush" Value="{ThemeResource DividerStrokeColorDefaultBrush}" />
+                        <Setter Property="Padding" Value="4,4,4,4" />
                     </Style>
                     <Style x:Key="KeyChordTextBlockStyle"
                            TargetType="TextBlock">
-                        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseMediumBrush}" />
+                        <Setter Property="Foreground" Value="{ThemeResource TextFillColorSecondaryBrush}" />
                     </Style>
 
                 </ResourceDictionary>
@@ -138,7 +141,7 @@
                 <Setter Property="VerticalAlignment" Value="Center" />
             </Style>
             <x:Int32 x:Key="EditButtonSize">32</x:Int32>
-            <x:Double x:Key="EditButtonIconSize">15</x:Double>
+            <x:Double x:Key="EditButtonIconSize">14</x:Double>
             <Style x:Key="EditButtonStyle"
                    BasedOn="{StaticResource DefaultButtonStyle}"
                    TargetType="Button">
@@ -150,7 +153,7 @@
             <Style x:Key="AccentEditButtonStyle"
                    BasedOn="{StaticResource AccentButtonStyle}"
                    TargetType="Button">
-                <Setter Property="Padding" Value="3" />
+                <Setter Property="Padding" Value="4" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="Height" Value="{StaticResource EditButtonSize}" />
                 <Setter Property="Width" Value="{StaticResource EditButtonSize}" />
@@ -191,6 +194,7 @@
 
                         <!--  Command Name  -->
                         <TextBlock Grid.Column="0"
+                                   FontWeight="Normal"
                                    Style="{StaticResource KeyBindingNameTextBlockStyle}"
                                    Text="{x:Bind Name, Mode=OneWay}"
                                    Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(IsInEditMode), Mode=OneWay}" />
@@ -205,7 +209,7 @@
 
                         <!--  Key Chord Text  -->
                         <Border Grid.Column="1"
-                                Padding="2,0,2,0"
+                                Padding="8,4,8,4"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 Style="{ThemeResource KeyChordBorderStyle}"
@@ -317,7 +321,6 @@
                                     </Flyout>
                                 </Button.Flyout>
                             </Button>
-
                         </StackPanel>
                     </Grid>
                 </ListViewItem>
@@ -332,6 +335,7 @@
                     Style="{StaticResource SettingsStackStyle}">
             <!--  Add New Button  -->
             <Button x:Name="AddNewButton"
+                    Margin="0,12,0,0"
                     Click="AddNew_Click">
                 <Button.Content>
                     <StackPanel Orientation="Horizontal">
