--- a/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
+++ b/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
@@ -68,24 +68,23 @@
     <Color x:Key="DeleteButtonColor">Firebrick</Color>
 
     <x:Double x:Key="StandardIconSize">14.0</x:Double>
-    <Thickness x:Key="StandardIndentMargin">13,0,0,0</Thickness>
     <Thickness x:Key="StandardControlMargin">0,24,0,0</Thickness>
-    <x:Double x:Key="StandardBoxMinWidth">250</x:Double>
+    <x:Double x:Key="StandardBoxMinWidth">248</x:Double>
     <x:Double x:Key="StandardControlMaxWidth">1000</x:Double>
-    <Thickness x:Key="SettingStackMargin">13,0,13,48</Thickness>
+    <Thickness x:Key="SettingStackMargin">0,0,0,0</Thickness>
 
     <!-- We're purposefully not providing a DataType here.
      This is expected to be used with an IReference<Microsoft::Terminal::Core::Color>.
      We're doing all the data type handling in the used converters.-->
     <DataTemplate x:Key="ColorPreviewTemplate">
-        <Grid ColumnSpacing="5">
+        <Grid ColumnSpacing="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Rectangle Grid.Column="0"
-                       Width="13"
-                       Height="13"
+                       Width="12"
+                       Height="12"
                        VerticalAlignment="Center"
                        Fill="{Binding Converter={StaticResource ColorToBrushConverter}}"
                        RadiusX="2"
@@ -112,13 +111,13 @@
     <!--  Used to stack a group of settings  -->
     <Style x:Key="SettingsStackStyle"
            TargetType="StackPanel">
-        <Setter Property="Margin" Value="{StaticResource SettingStackMargin}" />
+        <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
     </Style>
 
     <!--  Used to stack a group of settings inside a pivot  -->
     <Style x:Key="PivotStackStyle"
            TargetType="StackPanel">
-        <Setter Property="Margin" Value="{StaticResource SettingStackMargin}" />
+        <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
     </Style>
 
     <!--  Combo Box  -->
@@ -145,7 +144,7 @@
 
     <!--  Text Block  -->
     <Style x:Key="TextBlockSettingStyle"
-           BasedOn="{StaticResource BaseTextBlockStyle}"
+           BasedOn="{StaticResource BodyTextBlockStyle}"
            TargetType="TextBlock">
         <Setter Property="MinWidth" Value="{StaticResource StandardBoxMinWidth}" />
         <Setter Property="MaxWidth" Value="400" />
@@ -155,24 +154,27 @@
     </Style>
 
     <Style x:Key="TextBlockSubHeaderStyle"
-           BasedOn="{StaticResource SubtitleTextBlockStyle}"
+           BasedOn="{StaticResource BodyStrongTextBlockStyle}"
            TargetType="TextBlock">
         <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
+        <Setter Property="Margin" Value="0,32,0,4" />
     </Style>
 
     <!--  Used for disclaimers  -->
     <Style x:Key="DisclaimerStyle"
            TargetType="TextBlock">
         <Setter Property="TextWrapping" Value="Wrap" />
-        <Setter Property="MaxWidth" Value="1000" />
+        <Setter Property="MaxWidth" Value="{StaticResource StandardControlMaxWidth}" />
+        <Setter Property="Foreground" Value="{ThemeResource TextFillColorSecondaryBrush}" />
+        <Setter Property="Margin" Value="0,0,0,8" />
     </Style>
 
     <!--  Used for flyout messages  -->
     <Style x:Key="CustomFlyoutTextStyle"
            BasedOn="{StaticResource BaseTextBlockStyle}"
            TargetType="TextBlock">
-        <Setter Property="FontWeight" Value="Bold" />
-        <Setter Property="Margin" Value="0,0,0,10" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Margin" Value="0,0,0,8" />
         <Setter Property="TextWrapping" Value="Wrap" />
     </Style>
 
@@ -200,8 +202,8 @@
     <Style x:Key="BrowseButtonStyle"
            BasedOn="{StaticResource BaseButtonStyle}"
            TargetType="Button">
-        <Setter Property="Margin" Value="10,0,0,0" />
-        <Setter Property="MinHeight" Value="33" />
+        <Setter Property="Margin" Value="8,0,0,0" />
+        <Setter Property="MinHeight" Value="32" />
     </Style>
 
     <!--  Delete button based on Accent button template  -->
@@ -306,8 +308,8 @@
     <Style x:Key="ExtraSmallButtonStyle"
            BasedOn="{StaticResource BrowseButtonStyle}"
            TargetType="Button">
-        <Setter Property="Height" Value="25" />
-        <Setter Property="Width" Value="25" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="24" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="MinHeight" Value="0" />
@@ -317,25 +319,25 @@
     <Style x:Key="SmallButtonStyle"
            BasedOn="{StaticResource BrowseButtonStyle}"
            TargetType="Button">
-        <Setter Property="Height" Value="33" />
-        <Setter Property="Width" Value="33" />
-        <Setter Property="Padding" Value="5" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="32" />
+        <Setter Property="Padding" Value="4" />
     </Style>
 
     <Style x:Key="AccentBrowseButtonStyle"
            BasedOn="{StaticResource AccentButtonStyle}"
            TargetType="Button">
-        <Setter Property="Margin" Value="10,0,0,0" />
+        <Setter Property="Margin" Value="8,0,0,0" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
     </Style>
 
     <Style x:Key="AccentSmallButtonStyle"
            BasedOn="{StaticResource AccentButtonStyle}"
            TargetType="Button">
-        <Setter Property="Margin" Value="10,0,0,0" />
+        <Setter Property="Margin" Value="8,0,0,0" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
-        <Setter Property="Height" Value="33" />
-        <Setter Property="Width" Value="33" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="32" />
         <Setter Property="Padding" Value="5" />
     </Style>
 
@@ -350,8 +352,8 @@
     <Style x:Key="DeleteExtraSmallButtonStyle"
            BasedOn="{StaticResource DeleteButtonStyle}"
            TargetType="Button">
-        <Setter Property="Height" Value="25" />
-        <Setter Property="Width" Value="25" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="24" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="MinHeight" Value="0" />
@@ -360,7 +362,7 @@
 
     <Style x:Key="IconButtonTextBlockStyle"
            TargetType="TextBlock">
-        <Setter Property="Margin" Value="10,0,0,0" />
+        <Setter Property="Margin" Value="8,0,0,0" />
     </Style>
 
     <Style x:Key="BIAlignmentToggleButtonStyle"
@@ -1195,7 +1197,6 @@
            TargetType="Button">
         <Setter Property="Background" Value="{ThemeResource ExpanderHeaderBackground}" />
         <Setter Property="MinWidth" Value="{ThemeResource FlyoutThemeMinWidth}" />
-        <Setter Property="MaxWidth" Value="1000" />
         <Setter Property="MinHeight" Value="64" />
         <Setter Property="BorderThickness" Value="{ThemeResource ExpanderHeaderBorderThickness}" />
         <Setter Property="BorderBrush" Value="{ThemeResource ExpanderHeaderBorderBrush}" />
